[project]
name = "smart-image-router"
version = "0.1.0"
description = "AI Image Ranking Service"
authors = [
    {name = "Scheida",email = "maciej.wrzeszcz.solutions@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "starlette (>=0.52.1,<0.53.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
    "torchaudio (>=2.9.1,<3.0.0)",
    "transformers (>=4.57.6,<5.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "google-genai (>=1.0.0,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "sentencepiece (>=0.2.1,<0.3.0)",
    "protobuf (<6.0.0)",
    "opentelemetry-api (>=1.39.1,<2.0.0)",
    "opentelemetry-sdk (>=1.39.1,<2.0.0)",
    "opentelemetry-instrumentation-asgi (>=0.60b1,<0.61)",
    "opentelemetry-instrumentation-starlette (>=0.60b1,<0.61)",
    "opentelemetry-exporter-otlp (>=1.39.1,<2.0.0)",
    "opentelemetry-exporter-otlp-proto-grpc (>=1.39.1,<2.0.0)",
    "opentelemetry-instrumentation-logging (>=0.60b1,<0.61)",
    "opentelemetry-instrumentation-httpx (>=0.60b1,<0.61)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false